--- a/userlogin_code_r.html
+++ b/userlogin_code_r.html
@@ -10,7 +10,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; 
 charset=UTF-8">
-  <title>Material Design Login Screen</title>
+  <title>帳戶驗證</title>
 
       <link rel="stylesheet" href="css/style2.css">
 
